블로그 내용 변경

--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,8 @@ locale                   : "en-US"
 title                    : "KangHyun BLOG"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "이강현"
-description              : "An amazing website."
+name                     : "KangHyun LEE"
+description              : "Happy Website"
 url                      : "https://20170781.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "20170781/20170781.github.io"
